--- a/docs/sql/sfmc-sql-style-guide.mdx
+++ b/docs/sql/sfmc-sql-style-guide.mdx
@@ -2,13 +2,13 @@
 id: sfmc-sql-style-guide
 title: SFMC SQL Style Guide
 sidebar_label: SQL Style Guide
-description: Query with style. Readable, bug-free code is few shifts & spaces away.
+description: Query with style. Readable, bug-free code is a few shifts & spaces away.
 ---
 
 import TOCInline from '@theme/TOCInline';
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content='Query with style. Readable, bug-free code is few shifts & spaces away.' />
+<LeadText content='Query with style. Readable, bug-free code is a few shifts & spaces away.' />
 
 :::tip Table of Contents
 
@@ -16,20 +16,22 @@ import { LeadText } from '../../src/components/LeadText.js';
 
 :::
 
-First things first: this SQL style guide is highly subjective. You may use it as it is, implement only some parts of it, or ignore it all together. There are only two rules that I believe are a must have:
+First things first: this Salesforce Marketing Cloud SQL style guide is highly subjective. You may use it as it is, implement only some parts of it, or ignore it altogether. There are only two rules that I believe are a must-have:
 
-1. Be consitent across your code base.
+1. Be consistent across your codebase.
 2. Strive for good readability.
 
-Everything else is preference. And you are just about to learn about mine (with arguments and options).
+Everything else is preference. And you are just about to learn about mine.
 
-## Query Letter Case
+## Letter Case
+
+SQL gives you much freedom regarding the type of letter case you will be using for parts of your query. Let's use this freedom to create queries that are readable and aligned in convention to other Marketing Cloud programmatic languages operating on the same data.
 
 ### SQL Syntax Case
 
 __Use `UPPERCASE` for all elements of SQL syntax.__
 
-This approach helps visually differentiate query langauge from the names of data extensions, data views and fields and improve readability.
+This approach helps visually differentiate query language from Tables (data extensions, data views) and Columns (fields) to improve readability.
 
 ```sql
 /* ✅ Upper Case for SQL Syntax */
@@ -54,20 +56,20 @@ from Ent._Subscribers
 where DateJoined >= dateadd(month, -1, getdate())
 ```
 
-### Field & Source Names Case
+### Column & Table Names Case
 
-__Use `PascalCase` for all Source and Field names.__
+__Use `PascalCase` for all Table and Column names.__
 
-This is soft recommendation, as it is highly connected to other convention used by your organisation. If other connected systems are using different style, it might be best for you to keep it consistent in Marketing Cloud.
+Treat it as a soft recommendation, as it is highly connected to your organisation's conventions. If other connected systems are using a different style, it might be best to follow it in Marketing Cloud.
 
-This is especially true for Sources, as you might be using mixed convention leveraging uppercase elements and underscores for Data Extension names. However, try not to use hyphens, as those will require you to use square brackets around the name and can interfere in query syntax highlighting that lower the readability.
+It is especially true for Tables, as you might be using mixed convention leveraging lowercase, uppercase and underscores for Data Extension names. However, try not to use hyphens, as those will require you to use square brackets around the name and might interfere in query syntax highlighting, leading to worse readability.
 
-The most popular SQL convention for Source and Field names is `snake_case`. However, in Marketing Cloud the Source nad Field names will have the used case not only in your queries, but also in the User Interface. It is important to make them as readable and human friendly as possible. Additionally, in many cases you will also leverage those names in AMPScript and SSJS.
+The most popular SQL convention for Table and Column names is `snake_case`. However, in Marketing Cloud, the Table and Column names will share the case between your queries and the User Interface. It is essential to make them as readable and human friendly as possible. Additionally, in many cases, you will also leverage those names in AMPScript and SSJS.
 
-For Marketing Cloud purposes I believe `PascalCase` - especially for Field names - is the best choice.
+Due to the above, I believe `PascalCase` - especially for Column names - is the best choice for Marketing Cloud SQL.
 
 ```sql
-/* ✅ Pascal Case for Source and Field names */
+/* ✅ Pascal Case for Table and Column names */
 SELECT
     wel.SubscriberKey,
     wel.EmailAddress,
@@ -76,7 +78,7 @@ FROM WelcomeCampaignSegment AS wel
     INNER JOIN _Open AS o
         ON o.SubscriberKey = wel.SubscriberKey
 
-/* ✅ Pascal Case for Field names and custom consistent covention for Source names */
+/* ✅ Pascal Case for Column names and custom consistent covention for Table names */
 SELECT
     wel.SubscriberKey,
     wel.EmailAddress,
@@ -85,7 +87,7 @@ FROM WEL_WelcomeCampaignSegment_20201011_OTH AS wel
     INNER JOIN _Open AS o
         ON o.SubscriberKey = wel.SubscriberKey
 
-/* ❌ Lower Case for Source and Field names */
+/* ❌ Lower Case for Table and Column names */
 SELECT
     wel.subscriberkey,
     wel.emailaddress,
@@ -94,7 +96,7 @@ FROM welcomecampaignsegment AS wel
     INNER JOIN _open AS o
         ON o.subscriberkey = wel.subscriberkey
 
-/* ❌ Upper Case for Source and Field names */
+/* ❌ Upper Case for Table and Column names */
 SELECT
     WEL.SUBSCRIBERKEY,
     WEL.EMAILADDRESS,
@@ -108,9 +110,9 @@ FROM WELCOMECAMPAIGNSEGMENT AS WEL
 
 ## Alignment and Indentation
 
-SQL is very flexible when it comes to alignment and indentation of the query. Writing everything in one line creates a valid code that will run. But just because it is valid, it doesn't mean it is good. Generous use of new lines and indents has close to no impact on performance, but a massive impact on readability. Enter and Space keys are your friends.
+SQL is very flexible when it comes to alignment and indentation of the query. Writing everything in one line creates a valid code that will run. But just because it is correct, it doesn't mean it is good. Generous use of new lines and indents has close to no impact on performance but a massive impact on readability. Enter and Space keys are your friends.
 
-There are many styles out there, but I opted for one that merges good writing speed with excellent readability. It it build with few rules:
+There are many styles out there, and I decided to follow those that merge good writing speed with excellent readability.
 
 ### Single Information per Line
 
@@ -118,22 +120,22 @@ __Limit information per line to one.__
 
 I recommend keeping one information per line, as it allows for much easier scanning. The four most important examples of this approach are:
 
-1. Each [`SELECT`](./sfmc-sql-select.mdx) field in a separate line
+1. Each [`SELECT`](./sfmc-sql-select.mdx) Column in a separate line
 2. Each [`WHERE`](./sfmc-sql-where.mdx) condition in a separate line
 3. Each [`CASE`](./sfmc-sql-where.mdx#case-in-where) condition in a separate line
-4. Each [`JOIN`](./sfmc-sql-join.mdx) and [`ON`](./sfmc-sql-join.mdx#joining-on) relatonship in a separate line
+4. Each [`JOIN`](./sfmc-sql-join.mdx) and [`ON`](./sfmc-sql-join.mdx#joining-on) relationship in a separate line
 
 ```sql
 /* ✅ Single information per line  */
 SELECT
     s.SubscriberKey     AS SubscriberKey,
-    job.EmailName       AS EmailName,
+    j.EmailName         AS EmailName,
     s.EventDate         AS SentDate,
-    job.DeliveredTime   AS DeliveryDate,
+    j.DeliveredTime     AS DeliveryDate,
     o.EventDate         AS OpenDate
-FROM _Sent s
-    LEFT JOIN _Job AS job
-        ON job.JobID = s.JobID
+FROM _Sent AS s
+    LEFT JOIN _Job AS j
+        ON j.JobID = s.JobID
     LEFT JOIN _Open AS o
         ON o.JobID = s.JobID
         AND o.ListID = s.ListID
@@ -147,23 +149,23 @@ WHERE
         ELSE 0
     END
 
-/* ❌ Multiple informations per line */
-SELECT s.SubscriberKey AS SubscriberKey, job.EmailName AS EmailName, s.EventDate AS SentDate, job.DeliveredTime AS DeliveryDate, o.EventDate AS OpenDate
-FROM _Sent s
-    LEFT JOIN _Job AS job ON job.JobID = s.JobID
+/* ❌ Multiple pieces of information per line */
+SELECT s.SubscriberKey AS SubscriberKey, j.EmailName AS EmailName, s.EventDate AS SentDate, j.DeliveredTime AS DeliveryDate, o.EventDate AS OpenDate
+FROM _Sent AS s
+    LEFT JOIN _Job AS j ON j.JobID = s.JobID
     LEFT JOIN _Open AS o ON o.JobID = s.JobID AND o.ListID = s.ListID AND o.BatchID = s.BatchID AND o.SubscriberID = s.SubscriberID AND o.IsUnique = 1
 WHERE 1 = CASE WHEN j.EmailName LIKE 'UPS_%' THEN 1 WHEN j.EmailName LIKE 'CRS_%' THEN 1 ELSE 0 END
 ```
 
-As you can see, the [`SELECT`](./sfmc-sql-select.mdx) and [`WHERE`](./sfmc-sql-where.mdx) keywords have their separate line as well to mark respective block starting. For readability reasons, I make an exception if there is only one field or condition to be used:
+As you can see, the [`SELECT`](./sfmc-sql-select.mdx) and [`WHERE`](./sfmc-sql-where.mdx) keywords have their separate line to mark respective block starting. For readability reasons, I make an exception if there is only one Column or condition to be used:
 
 ```sql
-/* ✅ Single Field in SELECT and single condition in WHERE lines */
+/* ✅ Single Column in SELECT and single condition in WHERE lines */
 SELECT SubscriberKey
 FROM _Subscribers
 WHERE Domain = 'mateuszdabrowski.pl'
 
-/* ❌ Separate lines for single SELECT field and WHERE condition */
+/* ❌ Separate lines with single SELECT Column and WHERE condition */
 SELECT
     SubscriberKey
 FROM _Subscribers
@@ -173,15 +175,15 @@ WHERE
 
 :::note You Should Know
 
-If you are using `DISTINCT` or `TOP`, put it into the same line as [`SELECT`](./sfmc-sql-select.mdx). In such case, even if you work on a single field, move it to a separate row for better readability.
+If you are using `DISTINCT` or `TOP`, put it into the same line as [`SELECT`](./sfmc-sql-select.mdx). In such a case, even if you work on a single Column, move it to a separate row for better readability.
 
 ```sql
-/* ✅ Single Field in SELECT and single condition in WHERE lines */
+/* ✅ Single Column in SELECT and single condition in WHERE lines */
 SELECT DISTINCT TOP 10
     SubscriberKey
 FROM ContenstSubmissions
 
-/* ❌ Separate lines for single SELECT field and WHERE condition */
+/* ❌ Separate lines for single SELECT Column and WHERE condition */
 SELECT DISTINCT TOP 10 SubscriberKey
 FROM ContenstSubmissions
 ```
@@ -192,7 +194,7 @@ FROM ContenstSubmissions
 
 __Align main SQL keywords to the left.__
 
-This rule is focused on writing speed. While I prefer the aesthetics of the Vertically Aligned Space approach, I don't see any significant gains for readability. On the hand writing in this style in Marketing Cloud is a pain, as there is no prettify in Query Studio and Query Activity. All those additional spaces needs to be added manually. It's just not worth it.
+This rule focuses on writing speed. While I prefer the Vertically Aligned Space approach's aesthetics, I don't see any significant readability gains. On the other hand, writing in this style in Marketing Cloud is a pain, as there is no autoformatter supporting it in the Query Studio or Query Activity. We would have to add all those additional spaces manually. It's just not worth it.
 
 ```sql
 /* ✅ Left Aligned Keywords */
@@ -211,30 +213,30 @@ SELECT SubscriberKey,
 
 ### Consistent Indentation
 
-__Use indentation to highlight keyword relationships.__
+__Use indentation to highlight SQL keyword relationships.__
 
-This rule is focused on readability. The logic in short is to indent whenever the line is dependent on a previous line (child line), for example:
+This rule focuses on readability. The logic, in short, is to indent whenever the line is dependent on the previous line (child line), for example:
 
-- Selected Field Names are children of [`SELECT`](./sfmc-sql-select.mdx)
-- [`JOIN`](./sfmc-sql-join.mdx) keywords are children of the initial Source defined in [`FROM`](./sfmc-sql-from.mdx)
-- Joining conditions ([`ON`](./sfmc-sql-join.mdx#joining-on)) are children of the [`JOIN`](./sfmc-sql-join.mdx)
+- Selected Column Names are children of [`SELECT`](./sfmc-sql-select.mdx)
+- [`JOIN`](./sfmc-sql-join.mdx) keywords are children of the initial Table referenced with [`FROM`](./sfmc-sql-from.mdx)
+- Joining relationships ([`ON`](./sfmc-sql-join.mdx#joining-on)) are children of [`JOIN`](./sfmc-sql-join.mdx)
 - Case conditions are children of the [`CASE`](./sfmc-sql-where.mdx#case-in-where)
 - Where conditions are children of the [`WHERE`](./sfmc-sql-where.mdx)
 - Sub-queries follow the same rules in respective indentation level.
 
-For simplicity I use 4-spaces indent, as it is both standard and can be added in Marketing Cloud Query with a single click of Tab key.
+For simplicity I use 4-spaces indent, as it is both standard and can be added in Marketing Cloud Query with a single click of the Tab key.
 
 ```sql
 /* ✅ Dependency based indentation */
 SELECT
     s.SubscriberKey     AS SubscriberKey,
-    job.EmailName       AS EmailName,
+    j.EmailName         AS EmailName,
     s.EventDate         AS SentDate,
-    job.DeliveredTime   AS DeliveryDate,
+    j.DeliveredTime     AS DeliveryDate,
     o.EventDate         AS OpenDate
-FROM _Sent s
-    LEFT JOIN _Job AS job
-        ON job.JobID = s.JobID
+FROM _Sent AS s
+    LEFT JOIN _Job AS j
+        ON j.JobID = s.JobID
     LEFT JOIN _Open AS o
         ON o.JobID = s.JobID
         AND o.ListID = s.ListID
@@ -251,12 +253,12 @@ WHERE
 /* ❌ Lack of indentation */
 SELECT
 s.SubscriberKey     AS SubscriberKey,
-job.EmailName       AS EmailName,
+j.EmailName         AS EmailName,
 s.EventDate         AS SentDate,
-job.DeliveredTime   AS DeliveryDate,
+j.DeliveredTime     AS DeliveryDate,
 o.EventDate         AS OpenDate
-FROM _Sent s
-LEFT JOIN _Job AS job ON job.JobID = s.JobID
+FROM _Sent AS s
+LEFT JOIN _Job AS j ON j.JobID = s.JobID
 LEFT JOIN _Open AS o ON o.JobID = s.JobID
 AND o.ListID = s.ListID
 AND o.BatchID = s.BatchID
@@ -269,11 +271,96 @@ ELSE 0
 END
 ```
 
+### Intentional Spacing
+
+__Use spaces wherever it makes the query more readable.__
+
+The must-have is spacing around any [operators](./sfmc-sql-where.mdx#basic-operators) (equality or comparison) and after commas.
+
+However, there is another place where spacing is beneficial for readability but might require an exception in some scenarios. Spacing for [aliases](./sfmc-sql-select.mdx#aliasing-with-as) and `THEN` keywords of the [`CASE`](./sfmc-sql-where.mdx#case-in-where) statement.
+
+I try to use it whenever possible, but when there is huge imbalance in length (for example one Column requires multi-function calculation or there is a single complex `WHEN` in [`CASE`](./sfmc-sql-where.mdx#case-in-where)) equal spacing might make the query harder to read. Always decide which approach works best for your query from readability perspective.
+
+```sql
+/* ✅ Spacing around operators plus equalizing aliases and THEN */
+SELECT
+    s.SubscriberKey   AS SubscriberKey,
+    j.EmailName       AS EmailName,
+    s.EventDate       AS SentDate,
+    j.DeliveredTime   AS DeliveryDate,
+    o.EventDate       AS OpenDate
+FROM _Sent AS s
+    LEFT JOIN _Job AS j
+        ON j.JobID = s.JobID
+    LEFT JOIN _Open AS o
+        ON o.JobID = s.JobID
+        AND o.ListID = s.ListID
+        AND o.BatchID = s.BatchID
+        AND o.SubscriberID = s.SubscriberID
+        AND o.IsUnique = 1
+WHERE
+    1 = CASE
+        WHEN j.EmailName LIKE 'UPS_%'     THEN 1
+        WHEN j.EmailName LIKE 'CRS_%'     THEN 1
+        WHEN j.EmailName = 'OTH_SeedList' THEN 1
+        ELSE 0
+    END
+
+/* ✅ Spacing around operators plus equalizing aliases with exceptions */
+SELECT
+    s.SubscriberKey   AS SubscriberKey,
+    j.EmailName       AS EmailName,
+    s.EventDate       AS SentDate,
+    j.DeliveredTime   AS DeliveryDate,
+    o.EventDate       AS OpenDate
+    DATEDIFF(HOUR, s.EventDate, o.EventDate) AS TimeToOpen
+FROM _Sent AS s
+    LEFT JOIN _Job AS j
+        ON j.JobID = s.JobID
+    LEFT JOIN _Open AS o
+        ON o.JobID = s.JobID
+        AND o.ListID = s.ListID
+        AND o.BatchID = s.BatchID
+        AND o.SubscriberID = s.SubscriberID
+        AND o.IsUnique = 1
+WHERE
+    1 = CASE
+        WHEN j.EmailName LIKE 'UPS_%' OR j.EmailName LIKE 'CRS_%' THEN 1
+        WHEN j.EmailName = 'OTH_SeedList' THEN 1
+        ELSE 0
+    END
+
+/* ❌ Lack of spacing */
+SELECT
+    s.SubscriberKey AS SubscriberKey,
+    j.EmailName AS EmailName,
+    s.EventDate AS SentDate,
+    j.DeliveredTime AS DeliveryDate,
+    o.EventDate AS OpenDate
+    DATEDIFF(HOUR,s.EventDate,o.EventDate) AS TimeToOpen
+FROM _Sent AS s
+    LEFT JOIN _Job AS j
+        ON j.JobID=s.JobID
+    LEFT JOIN _Open AS o
+        ON o.JobID=s.JobID
+        AND o.ListID=s.ListID
+        AND o.BatchID=s.BatchID
+        AND o.SubscriberID=s.SubscriberID
+        AND o.IsUnique=1
+WHERE
+    1=CASE
+        WHEN j.EmailName LIKE 'UPS_%' THEN 1
+        WHEN j.EmailName LIKE 'CRS_%' THEN 1
+        WHEN j.EmailName='OTH_SeedList' THEN 1
+        ELSE 0
+    END
+```
+
 ### Commas Placement
 
 __Use commas at the end of the line.__
 
-There are few approaches related to comma placement, but putting them at the end of the line is easier for both writing and reading, as it is aligned with natural language.
+There are few approaches related to comma placement, but putting them at the end of the line is easier for both writing and reading, as it follows natural language.
 
 ```sql {3-5,10-12}
 /* ✅ Commas at the end */
@@ -295,13 +382,13 @@ FROM Ent._Subscribers
 
 ## Explicit vs Implicit
 
-Many things in SQL can be done in multiple ways - using various functions, symbols or shortcuts. While all those options may work, not all are recommended. Whenever you have to choose the approach, go for the explicit and strightforward approach. Even if it means writing few characters more.
+Many things in SQL can be done in multiple ways - using various functions, symbols or shortcuts. While all those options may work, not all are a good idea. Whenever you are choosing the approach, go for the explicit and straightforward. Even if it means writing a few characters more.
 
 ### Date Parts
 
-__Use long version of [Date Parts](./sfmc-sql-date-functions.mdx#date-parts).__
+__Use full [Date Parts](./sfmc-sql-date-functions.mdx#date-parts) names.__
 
-Yes, abbreviations let you save few characters, but they are killing the readability unless someone is fluent in those shortcuts. For Marketing Cloud purposes time saved writing is not worth the time lost when reading. Go with full version.
+Yes, abbreviations let you save few characters, but they kill the readability unless someone is fluent in those shortcuts. For Marketing Cloud purposes, the time saved during writing is not worth the time lost when reading. Go with the full version.
 
 ```sql {6,13}
 /* ✅ Full Date Part */
@@ -321,14 +408,14 @@ WHERE DateJoined >= DATEADD(M, -1, GETDATE())
 
 ### JOIN and ON
 
-__Use full [`JOIN`](./sfmc-sql-join.mdx) name and reference field from new Source first in [`ON`](./sfmc-sql-join.mdx#joining-on)__
+__Use [`INNER JOIN`](./sfmc-sql-join.mdx) name and reference Column from the new Table first after [`ON`](./sfmc-sql-join.mdx#joining-on).__
 
-Instead of just [`JOIN`](./sfmc-sql-join.mdx) write [`INNER JOIN`](./sfmc-sql-join.mdx#inner-join). It's longer, but it's explicit and in line with the rest of [`JOIN`](./sfmc-sql-join.mdx) names. Makes it easier to scan queries with [multiple various `JOIN`](./sfmc-sql-join.mdx#multiple-various-joins) statements.
+Instead of just [`JOIN`](./sfmc-sql-join.mdx), write [`INNER JOIN`](./sfmc-sql-join.mdx#inner-join) - it's longer but explicit and in line with the rest of [`JOIN`](./sfmc-sql-join.mdx) keywords. It makes it easier to scan queries with [multiple various `JOIN`](./sfmc-sql-join.mdx#multiple-various-joins) statements.
 
-Additionally, when defining [`JOIN`](./sfmc-sql-join.mdx) conditions after [`ON`](./sfmc-sql-join.mdx#joining-on), on the left side reference the field from the currently joined Source. The previous Source should be on the right side. It will improve consistency and reading speed.
+Additionally, when defining [`JOIN`](./sfmc-sql-join.mdx) relationships after [`ON`](./sfmc-sql-join.mdx#joining-on), firstly reference the Column from the joined Table. The previous Table should be on the right side. It will improve consistency and reading speed.
 
 ```sql {7-8,16-17}
-/* ✅ Explicit Inner Join and field from new Source on the left side of the ON condition */
+/* ✅ Explicit Inner Join and Column from new Table on the left side of the ON condition */
 SELECT
     wel.SubscriberKey,
     wel.EmailAddress,
@@ -337,7 +424,7 @@ FROM WelcomeCampaignSegment AS wel
     INNER JOIN _Open AS o
         ON o.SubscriberKey = wel.SubscriberKey
 
-/* ❌ Implicit Inner Join and field from new Source on the right side of the ON condition */
+/* ❌ Implicit Inner Join and Column from new Table on the right side of the ON condition */
 SELECT
     wel.SubscriberKey,
     wel.EmailAddress,
@@ -347,11 +434,63 @@ FROM WelcomeCampaignSegment AS wel
         ON wel.SubscriberKey = o.SubscriberKey
 ```
 
+### Table Aliases
+
+__When using `JOIN`, add meaningful aliases for Tables and prefix all Columns with them.__
+
+There are a few points:
+
+1. If you are working on only one Table without [`JOIN`](./sfmc-sql-join.mdx) - don't use [aliases](./sfmc-sql-join.mdx#table-name-prefix) at all. They are not needed and would make the query less readable.
+2. If you have any [`JOIN`](./sfmc-sql-join.mdx) - always use [aliases and prefixes](./sfmc-sql-join.mdx#table-name-prefix). SQL doesn't always require it, but it is much easier to read the query when the Columns have an explicit Table mention in the prefix.
+3. When you create an alias for a Table, make it meaningful. Using subsequent letters of the alphabet is not a good idea. Instead, use something that will remind the reader of the full name - for example, abbreviation using the first letter of each word in the Table. It will allow for much easier reading.
+4. Always use `AS` keyword between the Table name and the alias.
+
+```sql
+/* ✅ No aliasing in single Table query */
+SELECT
+    SubscriberKey,
+    EmailAddress
+FROM Ent._Subscribers
+
+/* ❌ Aliasing in single Table query */
+SELECT
+    s.SubscriberKey,
+    s.EmailAddress
+FROM Ent._Subscribers AS s
+
+/* ✅ Meaningful aliasing and prefixes in multi Table query */
+SELECT
+    wel.SubscriberKey,
+    wel.EmailAddress,
+    o.EventDate AS OpenDate
+FROM WelcomeCampaignSegment AS wel
+    INNER JOIN _Open AS o
+        ON o.SubscriberKey = wel.SubscriberKey
+
+/* ❌ No aliasing and no prefix in multi Table query */
+SELECT
+    SubscriberKey,
+    EmailAddress,
+    EventDate AS OpenDate
+FROM WelcomeCampaignSegment
+    INNER JOIN _Open
+        ON _Open.SubscriberKey = WelcomeCampaignSegment.SubscriberKey
+
+/* ❌ Not meaningful aliasing and no AS keyword in multi Table query */
+SELECT
+    a.SubscriberKey,
+    a.EmailAddress,
+    b.EventDate AS OpenDate
+FROM WelcomeCampaignSegment a
+    INNER JOIN _Open b
+        ON a.SubscriberKey = b.SubscriberKey
+```
+
 ### Not Equal To Symbol
 
 __Use `!=` instead of `<>`.__
 
-The `!=` symbol is much more popular and used in many languages. Using it makes query more readable to people not experienced in SQL.
+The `!=` symbol is much more popular and used in many languages. Using it makes the query more readable to people not experienced in SQL.
 
 ```sql {4,9}
 /* ✅ Use of != for negation */
@@ -363,3 +502,68 @@ WHERE CONVERT(DATE, DateJoined) != CONVERT(DATE, GETDATE())
 SELECT SubscriberKey
 FROM Ent._Subscribers
 WHERE CONVERT(DATE, DateJoined) <> CONVERT(DATE, GETDATE())
+```
+
+### Meaningful Column Names
+
+__Use Column names that suggest the data type.__
+
+Just as with a letter case, you might have your hands tied by cross-system dependencies. But whenever possible, strive for meaningful names:
+
+1. Use descriptive Column names. It is better to have a long explicit one (`IsTrackingSuppressed`) than a short mysterious abbreviation (`trk`).
+2. When the Column is a boolean, prefix it with `Is` (or `Has`/`Does` depending on the underlying data).
+3. When the Column is a date, suffix it with `Date`.
+
+```sql
+/* ✅ Meaningful and consistent Column Names */
+SELECT
+    s.SubscriberKey    AS SubscriberKey,
+    j.EmailName        AS EmailName,
+    s.EventDate        AS SentDate,
+    j.DeliveredTime    AS DeliveryDate,
+    o.EventDate        AS OpenDate,
+    j.SuppressTracking AS IsTrackingSuppressed
+FROM _Sent AS s
+    LEFT JOIN _Job AS j
+        ON j.JobID = s.JobID
+    LEFT JOIN _Open AS o
+        ON o.JobID = s.JobID
+
+/* ❌ No consistency and type alignment in Column Names */
+SELECT
+    s.SubscriberKey    AS SubscriberKey,
+    j.EmailName        AS EmailName,
+    s.EventDate        AS SentDate,
+    j.DeliveredTime    AS DeliveryTime,
+    o.EventDate        AS OpenedAT,
+    j.SuppressTracking AS SuppressTracking
+FROM _Sent AS s
+    LEFT JOIN _Job AS j
+        ON j.JobID = s.JobID
+    LEFT JOIN _Open AS o
+        ON o.JobID = s.JobID
+```
+
+## Sum Up
+
+It is a long article, so let's gather all the recommendations in one place:
+
+1. Be consistent
+2. Strive for readability
+3. Use comments to provide required context to your query
+4. Use `UPPERCASE` for SQL syntax [🔗](#sql-syntax-case)
+5. Use `PascalCase` for Table & Column names [🔗](#column--table-names-case)
+6. Limit information per line to one [🔗](#single-information-per-line)
+7. Align main SQL keywords to the left [🔗](#left-aligned-keywords)
+8. Use indentation to highlight the relationship between SQL keywords [🔗](#consistent-indentation)
+9. Use spaces wherever it makes the query more readable [🔗](#intentional-spacing)
+10. Use commas at the end of the line [🔗](#commas-placement)
+11. Use full Date Parts names [🔗](#date-parts)
+12. Use `INNER JOIN` name over `JOIN` [🔗](#join-and-on)
+13. In `JOIN ON` reference Column from newly joined Table on the left [🔗](#join-and-on)
+14. When using `JOIN`, add meaningful aliases for Tables and prefix all Columns with them [🔗](#join-and-on)
+15. Always use `AS` keyword between the Table name and the alias [🔗](#join-and-on)
+16. Use `!=` instead of `<>` [🔗](#not-equal-to-symbol)
+17. Use Column names that suggest the data type [🔗](#meaningful-column-names)
+
+If you want to share something I'm missing or have arguments for a different recommendation - [let me know](https://www.linkedin.com/in/mateusz-dabrowski-marketing/).
