--- a/docs/sql/sfmc-sql-style-guide.mdx
+++ b/docs/sql/sfmc-sql-style-guide.mdx
@@ -561,7 +561,7 @@ It is a long article, so let's gather all the recommendations in one place:
 11. Use full Date Parts names [🔗](#date-parts)
 12. Use `INNER JOIN` name over `JOIN` [🔗](#join-and-on)
 13. In `JOIN ON` reference Column from newly joined Table on the left [🔗](#join-and-on)
-14. When using `JOIN`, add meaningful aliases for Tables and prefix all Columns with them [🔗](#join-and-on)
+14. When using `JOIN`, add meaningful aliases for Tables and prefix all Columns [🔗](#join-and-on)
 15. Always use `AS` keyword between the Table name and the alias [🔗](#join-and-on)
 16. Use `!=` instead of `<>` [🔗](#not-equal-to-symbol)
 17. Use Column names that suggest the data type [🔗](#meaningful-column-names)
