Update to privacy policy (new Cloudflare cookie for fighting bots)

--- a/sites/privacy.mdx
+++ b/sites/privacy.mdx
@@ -39,6 +39,7 @@ Cloudflare is service providing security and protection for websites.
 Cookie Name | Expiration | Purpose
 ----------- | ---------- | -------
 _cfduid     | 11 days    | This cookie collects anonymised (one-way hashed) visitor IP addresses to detect malicious ones and minimise blocking legitimate users.
+_cf_bm      | 30 minutes | This cookie detects behaviour anomalies to identify and mitigate automated bad bot traffic
 
 ## Data processing
 
